syntax = "proto3";

option java_package = "workoutTrackerService";
option java_multiple_files = true;
option java_outer_classname = "WorkoutTrackerProtoService";

service WorkoutTrackerService {

  rpc WorkoutList(stream WorkoutRequest) returns (stream WorkoutResponse) {}
}


message WorkoutRequest {
  string workout_name = 1;

  bool allOrSingle = 4;
}

message WorkoutResponse{
  string workout_name = 1;
  int32 calorie_amount = 3;
}

